--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.1"
 
 services:
   backend:
-    build: ..
+    build:
+      context: .
+      dockerfile: Dockerfile
 #    command: daphne -b 0.0.0.0 -p 8000 project.asgi:application
     command: tail -f > /dev/null
 #    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
