--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,19 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-#    command: daphne -b 0.0.0.0 -p 8000 project.asgi:application
-    command: tail -f > /dev/null
+    command: daphne -b 0.0.0.0 -p 8000 project.asgi:application
+#    command: tail -f > /dev/null
 #    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
     volumes:
       - .:/project
-    ports:
-      - 8000:8000
-#    expose:
-#      - 8000
+#    ports:
+#      - 8000:8000
+    expose:
+      - 8000
     restart: always
     depends_on:
       - db
-#      - redis
+      - redis
     env_file:
       - .env
   db:
@@ -31,5 +31,28 @@ services:
     env_file:
       - .env
     restart: unless-stopped
+  redis:
+    image: redis:latest
+    restart: always
+  celery:
+    build: .
+    command: celery -A project worker -l debug
+    restart: always
+    volumes:
+      - .:/project
+    depends_on:
+      - redis
+  nginx:
+    image: nginx:latest
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./logs/nginx/:/project/logs/nginx/
+      - ./static_files/:/project/static_files/
+      - ./media/:/project/media/
+    depends_on:
+      - backend
+    restart: always
 volumes:
   postgres_data:
